# PY_UNIR_DOCUMENTOS_A_PDF

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  OPTIMIZACIONES_RENDIMIENTO.md  README.md  SETUP_README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
ARCHIVOS/: README.md
CONSOLIDADOS/: README.md
TEMP_CONVERSION/: README.md
config/: README.md  app_config.json  logging_config.json
data/: README.md
data/input/: README.md  cedulamariadelCarmen.doc  certificadobancario.doc
data/output/: README.md
docs/: README.md  version_implementation_summary.md
scripts/: build_exe.bat  create_icon.py  measure_performance.py  optimized_conversion.py  optimized_performance_test.py  performance_analyzer.py  setup.bat
src/pdf_consolidator/: __init__.py
temp/: README.md
tests/: README.md  __init__.py  conftest.py  test_utils.py
